--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <aside>
+        <leftside>
             <div class="top">
                 <div class="logo">
                     <img src="./images/logo.png">
@@ -25,17 +25,13 @@
                 </div>
             </div>
             <div class="sidebar">
-                <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
+                <a href="#" class="active">
+                    <span class="material-icons-sharp">space_dashboard</span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="#" class="active">
+                <a href="#" >
                     <span class="material-icons-sharp">person_outline</span>
-                    <h3>Customers</h3>
-                </a>
-                <a href="#">
-                    <span class="material-icons-sharp">receipt_long</span>
-                    <h3>Orders</h3>
+                    <h3>Personal Info</h3>
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">insights</span>
@@ -43,12 +39,8 @@
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">mail_outline</span>
-                    <h3>Messages</h3>
+                    <h3>Notifications</h3>
                     <span class="message-count">26</span>
-                </a>
-                <a href="#">
-                    <span class="material-icons-sharp">inventory</span>
-                    <h3>Products</h3>
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">report_gmailerrorred</span>
@@ -59,20 +51,16 @@
                     <h3>Settings</h3>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">add</span>
-                    <h3>Add Product</h3>
-                </a>
-                <a href="#">
                     <span class="material-icons-sharp">logout</span>
                     <h3>Logout</h3>
                 </a>
             </div>
-        </aside>
-        <!------------------ END OF ASIDE -------------------->
+        </leftside>
+        <!------------------ END OF LEFTSIDE -------------------->
         <main>
             <h1>Dashboard</h1>
             <div class="date">
-                <input type="date">
+                <input type="date" >
             </div>
             <div class="insights">
                 <div class="sales">
@@ -131,7 +119,7 @@
                     </div>
                     <small class="text-muted">Last 24 Hours</small>
                 </div>
-                <!-----end of sales-->>
+                <!-----end of sales-->
             </div>
             <div class="recent-orders">
                 <h2>Recent Orders</h2>
@@ -187,9 +175,9 @@
                 <button id="menu-btn">
                     <span class="material-icons-sharp">menu</span>
                 </button>
-                <div class="theme-toggler">
+                <div class="theme-toggler" >
                     <span class="material-icons-sharp active">light_mode</span>
-                    <span class="material-icons-sharp">dark_mode</span>
+                    <span class="material-icons-sharp ">dark_mode</span>
                 </div>
                 <div class="profile">
                     <div class="info">
@@ -206,76 +194,71 @@
                 <div class="updates">
                     <div class="update">
                         <div class="profile-photo">
-                            <img src="./images/profile-2.jpg">
+                            <img src="./images/profile-1.jpg">
                         </div>
                         <div class="messages">
-                            <p><b>Mike Tyson</b> received his order of Night lion tech GPS drone.</p>
+                            <p><b>Devin Lin</b> Completed 10,000 steps for today!</p>
                             <small class="text-muted">2 Minutes Ago</small>
                         </div>
-                    </div><div class="update">
+                    </div>
+                    <div class="update">
                         <div class="profile-photo">
-                            <img src="./images/profile-3.jpg">
+                            <img src="./images/profile-1.jpg">
                         </div>
                         <div class="messages">
-                            <p><b>Mike Tyson</b> received his order of Night lion tech GPS drone.</p>
-                            <small class="text-muted">2 Minutes Ago</small>
-                        </div>
-                    </div><div class="update">
-                        <div class="profile-photo">
-                            <img src="./images/profile-4.jpg">
-                        </div>
-                        <div class="messages">
-                            <p><b>Mike Tyson</b> received his order of Night lion tech GPS drone.</p>
+                            <p><b>Devin Lin</b> Completed your goal of 2,000 calories!</p>
                             <small class="text-muted">2 Minutes Ago</small>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="sales-analytics">
-                <h2>Sales Analytics</h2>
-                <div class="item online">
+
+           <!-----end of updates-->
+            <div class="analytics">
+                <h2>Analytics</h2>
+                <div class="item calories">
                     <div class="icon">  
-                        <span class="material-icons-sharp">shopping_cart</span>
+                        <span class="material-icons-sharp">food_bank</span>
                     </div>
                     <div class="right">
                         <div class="info">
-                            <h3>ONLINE ORDER</h3>
+                            <h3>CALORIES</h3>
                             <small class="text-muted">Last 24 Hours</small>
                         </div>
                         <h5 class="success">+39%</h5>
                         <h3>3849</h3>
                     </div>
                 </div>
-                <div class="item offline">
+                <div class="item steps">
                     <div class="icon">  
-                        <span class="material-icons-sharp">local_mall</span>
+                        <span class="material-icons-sharp">hiking</span>
                     </div>
                     <div class="right">
                         <div class="info">
-                            <h3>OFFLINE ORDER</h3>
+                            <h3>STEPS</h3>
                             <small class="text-muted">Last 24 Hours</small>
                         </div>
                         <h5 class="danger">-17%</h5>
                         <h3>1100</h3>
                     </div>
                 </div>
-                <div class="item customers">
+                <div class="item pl">
                     <div class="icon">  
                         <span class="material-icons-sharp">person</span>
                     </div>
                     <div class="right">
                         <div class="info">
-                            <h3>NEW CUSTOMERS</h3>
+                            <h3>PROFIT AND LOSS</h3>
                             <small class="text-muted">Last 24 Hours</small>
                         </div>
                         <h5 class="success">+25%</h5>
-                        <h3>849</h3>
+                        <h3>$849</h3>
                     </div>
                 </div>
-                <div class="item add-product">
+                <div class="item add-analytics">
                     <div>
                         <span class="material-icons-sharp">add</span>
-                        <h3>Add Products</h3>
+                        <h3>Add analytics</h3>
                     </div>
                 </div>
             </div>
