--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             <div class="top">
                 <div class="logo">
                     <img src="./images/logo.png">
-                    <h2>FIT <span class="danger">TOES</span></h2>
+                    <h2>ALL <span class="danger">DASH</span></h2>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">close</span>
@@ -63,12 +63,12 @@
                 <input type="date" >
             </div>
             <div class="insights">
-                <div class="sales">
+                <div class="spendings">
                     <span class="material-icons-sharp">analytics</span>
                     <div class="middle">
                         <div class="left">
-                            <h3>Total Sales</h3>
-                            <h1>$25,024</h1>
+                            <h3>Total Spendings</h3>
+                            <h1>$4,024 / $5000</h1>
                         </div>
                         <div class="progress">
                             <svg>
@@ -79,41 +79,41 @@
                             </div>
                         </div>
                     </div>
-                    <small class="text-muted">Last 24 Hours</small>
+                    <small class="text-muted">Last Month</small>
                 </div>
                 <!-----end of sales-->
-                <div class="expenses">
+                <div class="steps">
                     <span class="material-icons-sharp">bar_chart</span>
                     <div class="middle">
                         <div class="left">
-                            <h3>Total Expenses</h3>
-                            <h1>$14,160</h1>
+                            <h3>Total Steps</h3>
+                            <h1>10,160</h1>
                         </div>
                         <div class="progress">
                             <svg>
                                 <circle cx='38' cy='38' r='36'></circle>
                             </svg>
                             <div class="number">
-                                <p>62%</p>
+                                <p>100%</p>
                             </div>
                         </div>
                     </div>
                     <small class="text-muted">Last 24 Hours</small>
                 </div>
                 <!-----end of expenses-->
-                <div class="income">
+                <div class="calories">
                     <span class="material-icons-sharp">stacked_line_chart</span>
                     <div class="middle">
                         <div class="left">
-                            <h3>Total sales</h3>
-                            <h1>$10.864</h1>
+                            <h3>Total calories</h3>
+                            <h1>2,543</h1>
                         </div>
                         <div class="progress">
                             <svg>
                                 <circle cx='38' cy='38' r='36'></circle>
                             </svg>
                             <div class="number">
-                                <p>44%</p>
+                                <p>100%</p>
                             </div>
                         </div>
                     </div>
@@ -121,47 +121,47 @@
                 </div>
                 <!-----end of sales-->
             </div>
-            <div class="recent-orders">
-                <h2>Recent Orders</h2>
+            <div class="recent-spendings">
+                <h2>Recent Spendings</h2>
                 <table>
                     <thead> 
                         <tr>
-                            <th>Product Name</th>
-                            <th>Product Number</th>
-                            <th>Payment</th>
-                            <th>Status</th>
+                            <th>Transaction</th>
+                            <th>Amount</th>
+                            <th>Time</th>
+                            <th>Category</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Foldable Mini Drone</td>
-                            <td>85631</td>
-                            <td>Due</td>
-                            <td class="warning">Pending</td>
+                            <td class="transaction-name">Inaka Power</td>
+                            <td>$53.50</td>
+                            <td>2 hours ago</td>
+                            <td class="warning">Shopping</td>
                             <td class="primary">Details</td>
                         </tr><tr>
-                            <td>Foldable Mini Drone</td>
-                            <td>85631</td>
-                            <td>Due</td>
-                            <td class="warning">Pending</td>
+                            <td class="transaction-name">Deli and Grill</td>
+                            <td>$8.32</td>
+                            <td>7 hours ago</td>
+                            <td class="warning">Food</td>
                             <td class="primary">Details</td>
                         </tr><tr>
-                            <td>Foldable Mini Drone</td>
-                            <td>85631</td>
-                            <td>Due</td>
-                            <td class="warning">Pending</td>
+                            <td class="transaction-name">Chipotle Mexican Grill</td>
+                            <td>$13.66</td>
+                            <td>Friday</td>
+                            <td class="warning">Food</td>
                             <td class="primary">Details</td>
                         </tr><tr>
-                            <td>Foldable Mini Drone</td>
-                            <td>85631</td>
-                            <td>Due</td>
-                            <td class="warning">Pending</td>
+                            <td class="transaction-name">ikea.com</td>
+                            <td>$238.44</td>
+                            <td>Thursday</td>
+                            <td class="warning">Shopping</td>
                             <td class="primary">Details</td>
                         </tr><tr>
-                            <td>Foldable Mini Drone</td>
-                            <td>85631</td>
-                            <td>Due</td>
-                            <td class="warning">Pending</td>
+                            <td class="transaction-name">Apple</td>
+                            <td>$7.99</td>
+                            <td>8/18/22</td>
+                            <td class="warning">Entertainment</td>
                             <td class="primary">Details</td>
                         </tr>
                     </tbody>
@@ -176,8 +176,8 @@
                     <span class="material-icons-sharp">menu</span>
                 </button>
                 <div class="theme-toggler" >
-                    <span class="material-icons-sharp active">light_mode</span>
-                    <span class="material-icons-sharp ">dark_mode</span>
+                    <span class="material-icons-sharp active">dark_mode</span>
+                    <span class="material-icons-sharp ">light_mode</span>
                 </div>
                 <div class="profile">
                     <div class="info">
