--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             <div class="top">
                 <div class="logo">
                     <img src="./images/logo.png">
-                    <h2>ALL <span class="danger">DASH</span></h2>
+                    <h2>ALLDASH</h2>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">close</span>
@@ -74,8 +74,10 @@
                             <h1>$4,024 / $5000</h1>
                         </div>
                         <div class="progress">
+                            
                             <svg>
                                 <circle cx='38' cy='38' r='36'></circle>
+                                
                             </svg>
                             <div class="number">
                                 <p>81%</p>
